--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,10 @@
     --black-text: #1E1E1E;
 }
 
-@theme inline {
-    
-}
-
 body {
     color: var(--black-text);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--montserrat-alternates);
 }
